force-app/main/default/objects/Apttus__DocAssemblyRuleset__c/Apttus__DocAssemblyRuleset__c.object-meta.xml
<CustomObject>
    <description>Represents a rule set that contains a list of rules to determine the sections to include in a dynamic template.</description>
    <label>Doc Assembly Ruleset</label>
    <nameField>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Assembly Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>