force-app/main/default/objects/Apttus__DocAssemblyRuleset__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the ruleset is active</description>
    <inlineHelpText>Indicates whether the ruleset is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>