force-app/main/default/objects/Apttus__DocAssemblyRuleset__c/fields/Apttus__ChildObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ChildObject__c</fullName>
    <description>Type name of child business object like line item</description>
    <inlineHelpText>Type name of child business object like line item</inlineHelpText>
    <label>Child Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>