force-app/main/default/objects/Apttus__DocAssemblyRuleset__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>The description of the rule set</description>
    <inlineHelpText>The description of the rule set</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>