force-app/main/default/objects/Apttus__DocAssemblyRuleset__c/fields/Apttus__ParentReferenceField__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ParentReferenceField__c</fullName>
    <description>Field that relates the child object to the parent. This helps resolve multiple parent references</description>
    <inlineHelpText>Field that relates the child object to the parent. This helps resolve multiple parent references</inlineHelpText>
    <label>Parent Reference Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>