force-app/main/default/objects/Apttus__DocAssemblyRuleset__c/fields/Apttus__RecordTypes__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RecordTypes__c</fullName>
    <description>Note: If you add a new agreement/quote record type, the type must also be manually added to this set of picklist values to keep record types in sync between agreements/quotes and templates.</description>
    <inlineHelpText>Note: If you add a new agreement/quote record type, the type must also be manually added to this set of picklist values to keep record types in sync between agreements/quotes and templates.</inlineHelpText>
    <label>Record Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>